Update CLB location page to fix mobile view issue
trying to fix the mobile view for the CLB page, i believe two
images are messing it up, added a decendant combinator to the
styles-2.css page to fix. now image is not centered.

--- a/styles-2.css
+++ b/styles-2.css
@@ -13,7 +13,7 @@ body {
     margin-right: auto;
 }
 
-img {
+header img {
     display: block;
     margin-left: auto;
     margin-right: auto;
